--- a/demo/app/app.component.html
+++ b/demo/app/app.component.html
@@ -1,11 +1,13 @@
 <ActionBar title="Demo of nativescript-accessibility-ext"></ActionBar>
 <ScrollView>
   <StackLayout>
-    <ios>
-      <Label text="Enable VoiecOver, if you haven't already"></Label>
-    </ios>
-    <android>
-      <Label text="Enable TalkBack, if you haven't already"></Label>
-    </android>
+    <StackLayout class="text-center m-10" backgroundColor="blue">
+      <ios>
+        <Label text="Enable VoiecOver, if you haven't already"></Label>
+      </ios>
+      <android>
+        <Label text="Enable TalkBack, if you haven't already"></Label>
+      </android>
+    </StackLayout>
   </StackLayout>
 </ScrollView>
