--- a/demo/app/app.component.html
+++ b/demo/app/app.component.html
@@ -1,13 +1,92 @@
 <ActionBar title="Demo of nativescript-accessibility-ext"></ActionBar>
 <ScrollView>
   <StackLayout>
-    <StackLayout class="text-center m-10" backgroundColor="blue">
+    <StackLayout
+      class="text-center p-10"
+
+      accessible="true"
+      automationText="Congratulation accessibility is enabled"
+      accessibilityTraits="header,text"
+    >
       <ios>
         <Label text="Enable VoiecOver, if you haven't already"></Label>
       </ios>
       <android>
         <Label text="Enable TalkBack, if you haven't already"></Label>
       </android>
+    </StackLayout>
+
+    <StackLayout class="feature-group">
+      <Label class="h1 text-center m-2" text="accessible (iOS, Android)"></Label>
+      <Label class="body" text="Indicate that the view is an accessibility element"></Label>
+
+      <StackLayout class="m-y-5">
+        <Label class="h2" text="Allowed value:"></Label>
+        <Label class="p-x-5" text="true"></Label>
+        <Label class="p-x-5" text="false"></Label>
+      </StackLayout>
+
+      <StackLayout
+        class="m-2"
+
+        accessible="true"
+        automationText="This is read as a group"
+      >
+        <Label class="text-left" text='accessible="true"'></Label>
+        <Label class="body" text="these elements shouldn't be read, only the box"></Label>
+
+        <Button
+          class="m-2 btn"
+          text="tap me"
+          automationText="Except of cause child elements that are marked as accessible too"
+
+          accessible="true"
+          accessibilityTraits="button"
+          (tap)="tapped($event)"
+        ></Button>
+
+        <Button
+          class="m-2 btn"
+          text="tap me 2"
+          automationText="Except of cause child elements that are marked as accessible too"
+
+          accessible="true"
+          accessibilityTraits="button"
+          (tap)="tapped($event)"
+        ></Button>
+      </StackLayout>
+    </StackLayout>
+
+    <StackLayout class="feature-group">
+      <Label class="h1 text-center" text="Buttons"></Label>
+
+      <Button class="text-right" text="Normal" automationText="this is just a normal"></Button>
+
+      <GridLayout rows="50, 50" columns="100, 100">
+        <StackLayout
+          col="0"
+
+          accessible="true"
+          automationText="This now a button"
+          accessibilityComponentType="button"
+          accessibilityTraits="button"
+        >
+          <Label text="First button"></Label>
+        </StackLayout>
+
+        <StackLayout
+          col="1"
+          rowSpan="2"
+
+          accessible="true"
+          automationText="This now a button"
+          accessibilityComponentType="button"
+          accessibilityTraits="button"
+        >
+          <Image height="50" src="res://btnicon"></Image>
+          <Label text="Second button" textWrap="true"></Label>
+        </StackLayout>
+      </GridLayout>
     </StackLayout>
   </StackLayout>
 </ScrollView>
