--- a/demo/app/app.component.html
+++ b/demo/app/app.component.html
@@ -18,7 +18,7 @@
 
     <StackLayout class="feature-group">
       <Label class="h1 text-center m-2" text="accessible (iOS, Android)"></Label>
-      <Label class="body" text="Indicate that the view is an accessibility element"></Label>
+      <Label class="body" textWrap="true" text="Indicate that the view is an accessibility element"></Label>
 
       <StackLayout class="m-y-5">
         <Label class="h2" text="Allowed value:"></Label>
@@ -26,8 +26,10 @@
         <Label class="p-x-5" text="false"></Label>
       </StackLayout>
 
+      <Label class="h2" text="Examples:"></Label>
+
       <StackLayout
-        class="m-2"
+        class="feature-example"
 
         accessible="true"
         automationText="This is read as a group"
@@ -41,6 +43,7 @@
           automationText="Except of cause child elements that are marked as accessible too"
 
           accessible="true"
+          accessibilityComponentType="button"
           accessibilityTraits="button"
           (tap)="tapped($event)"
         ></Button>
@@ -51,9 +54,40 @@
           automationText="Except of cause child elements that are marked as accessible too"
 
           accessible="true"
+          accessibilityComponentType="button"
           accessibilityTraits="button"
           (tap)="tapped($event)"
         ></Button>
+      </StackLayout>
+
+      <StackLayout class="feature-example" accessible="false">
+        <Label class="text-left" text='accessible="false"'></Label>
+
+        <StackLayout class="body" orientation="horizontal">
+          <Label class="p-x-2" text="These"></Label>
+          <Label class="p-x-2" text="elements"></Label>
+          <Label class="p-x-2" text="are"></Label>
+          <Label class="p-x-2" text="read one"></Label>
+          <Label class="p-x-2" text="by one"></Label>
+        </StackLayout>
+      </StackLayout>
+    </StackLayout>
+
+    <StackLayout class="feature-group">
+      <Label class="h1 text-center" textWrap="true" text="automationText (iOS, Android)"></Label>
+
+      <Label class="body" textWrap="true" text="Sets the accessibilityLabel on the view. Note: on iOS it sets both accessibilityIdentifier AND accessibilityLabel. On Android contentDescription"></Label>
+      <Label class="m-y-2 footnote" textWrap="true" text="Note: This is supported by NativeScript without this plugin"></Label>
+
+      <StackLayout class="m-y-5">
+        <Label class="h2" text="Allowed value:"></Label>
+        <Label class="p-x-5" text="Any text value"></Label>
+      </StackLayout>
+
+      <Label class="h2" text="Examples:"></Label>
+
+      <StackLayout class="feature-example">
+        <Label class="m-y-5" text="The shown text" automationText="The shown text is not the same text that is read aloud"></Label>
       </StackLayout>
     </StackLayout>
 
@@ -84,7 +118,7 @@
           accessibilityTraits="button"
         >
           <Image height="50" src="res://btnicon"></Image>
-          <Label text="Second button" textWrap="true"></Label>
+          <Label class="text-center" text="Second button" textWrap="true"></Label>
         </StackLayout>
       </GridLayout>
     </StackLayout>
