--- a/demo/app/app.android.scss
+++ b/demo/app/app.android.scss
@@ -1,1 +1,3 @@
-@import 'core.light.android.scss';
+@import 'nativescript-theme-core/scss/light';
+@import 'nativescript-theme-core/scss/index';
+@import 'nativescript-theme-core/scss/platforms/index.android';
