--- a/demo/app/app.ios.scss
+++ b/demo/app/app.ios.scss
@@ -1,1 +1,3 @@
-@import 'core.light.ios.scss';
+@import 'nativescript-theme-core/scss/light';
+@import 'nativescript-theme-core/scss/index';
+@import 'nativescript-theme-core/scss/platforms/index.ios';
