--- a/demo/app/app.android.scss
+++ b/demo/app/app.android.scss
@@ -1,3 +1,3 @@
-@import 'nativescript-theme-core/scss/light';
-@import 'nativescript-theme-core/scss/index';
-@import 'nativescript-theme-core/scss/platforms/index.android';
+@import '~nativescript-theme-core/scss/light';
+@import '~nativescript-theme-core/scss/index';
+@import '~nativescript-theme-core/scss/platforms/index.android';
