--- a/nativescript-accessibility-ext/scss/ios/_login.scss
+++ b/nativescript-accessibility-ext/scss/ios/_login.scss
@@ -1,4 +1,4 @@
-@each $scale, $params in $font-scales {
+@each $scale, $params in $a11y-font-scales {
   $factor: map-get($params, factor);
 
   Page.a11y-fontscale-#{$scale} {
