chor: updating to nativescript-4.1

--- a/demo-ng/app/app.component.html
+++ b/demo-ng/app/app.component.html
@@ -1,4 +1,7 @@
-<ActionBar title="Demo of nativescript-accessibility-ext"></ActionBar>
+<!--
+  TODO: Breaks in nativescript-angular@6.0.0
+  <ActionBar title="Demo of nativescript-accessibility-ext"></ActionBar>
+-->
 <ScrollView>
   <StackLayout>
     <StackLayout
