update demos to nativescript-5.1

--- a/demo-ng/app/app.component.html
+++ b/demo-ng/app/app.component.html
@@ -5,14 +5,14 @@
 <ScrollView>
   <StackLayout>
     <StackLayout
-      class="text-center p-10"
+      class="text-center"
 
       accessible="true"
       accessibilityLabel="Congratulation accessibility is enabled"
       accessibilityTraits="header"
     >
       <ios>
-        <Label text="Enable VoiecOver, if you haven't already"></Label>
+        <Label class="scaled" text="Enable VoiecOver, if you haven't already"></Label>
       </ios>
       <android>
         <Label text="Enable TalkBack, if you haven't already"></Label>
