--- a/demo-ng/app/app.ios.scss
+++ b/demo-ng/app/app.ios.scss
@@ -1,3 +1,5 @@
 @import '~nativescript-theme-core/scss/light';
 @import '~nativescript-theme-core/scss/index';
 @import '~nativescript-theme-core/scss/platforms/index.ios';
+
+@import '~@nota/nativescript-accessibility-ext/scss/a11y.ios';
