--- a/demo/app/home/home.component.html
+++ b/demo/app/home/home.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="{N} accessibility" icon="" class="action-bar"></ActionBar>
+<ActionBar title="{N} accessibility" accessibilityLabel="{N} accessibility"  icon="" class="action-bar"></ActionBar>
 
 <StackLayout class="p-20">
   <StackLayout *ngIf="!screenReaderEnabled" class="text-center h1 grey">
