feat(FontScaling): It now supported on all views.

--- a/src/scss/ios/_buttons.scss
+++ b/src/scss/ios/_buttons.scss
@@ -2,8 +2,8 @@
   $font-size: 15;
   $factor: map-get($params, factor);
 
-  Page.a11y-fontscale-#{$scale} {
-    .btn {
+  .btn {
+    &.a11y-fontscale-#{$scale} {
       font-size: $font-size * $factor;
     }
   }
