--- a/src/scss/ios/_action-bar.scss
+++ b/src/scss/ios/_action-bar.scss
@@ -2,12 +2,11 @@
   $font-size: 17;
   $factor: map-get($params, factor);
 
-  Page.a11y-fontscale-#{$scale} {
-    .action-bar {
-      .action-bar-title {
+  .action-bar {
+    .action-bar-title {
+      &.a11y-fontscale-#{$scale} {
         font-size: $font-size * $factor;
       }
     }
   }
 }
-
