--- a/src/scss/ios/_labels.scss
+++ b/src/scss/ios/_labels.scss
@@ -34,7 +34,7 @@ $a11y-label-classes: (
   footnote: (
     font-size: 13,
     scales: $a11y-font-scales,
-  )
+  ),
 ) !default;
 
 @each $label-classname, $values in $a11y-label-classes {
@@ -44,8 +44,8 @@ $a11y-label-classes: (
   @each $scale, $params in $scales {
     $factor: map-get($params, factor);
 
-    Page.a11y-fontscale-#{$scale} {
-      .#{$label-classname} {
+    .#{$label-classname} {
+      &.a11y-fontscale-#{$scale} {
         font-size: $a11y-font-size * $factor;
       }
     }
