--- a/src/scss/ios/_list-view.scss
+++ b/src/scss/ios/_list-view.scss
@@ -1,9 +1,9 @@
 @each $scale, $params in $a11y-font-scales {
   $factor: map-get($params, factor);
 
-  Page.a11y-fontscale-#{$scale} {
-    .list-group {
-      .list-group-item {
+  .list-group {
+    .list-group-item {
+      &.a11y-fontscale-#{$scale} {
         $font-size: 16;
         font-size: $font-size * $factor;
 
