--- a/src/scss/ios/_segmented-bar.scss
+++ b/src/scss/ios/_segmented-bar.scss
@@ -2,10 +2,9 @@
   $font-size: 13;
   $factor: map-get($params, factor);
 
-  Page.a11y-fontscale-#{$scale} {
-    .segmented-bar {
+  .segmented-bar {
+    &.a11y-fontscale-#{$scale} {
       font-size: $font-size * $factor;
     }
   }
 }
-
