--- a/src/scss/ios/_forms.scss
+++ b/src/scss/ios/_forms.scss
@@ -1,20 +1,20 @@
-@each $scale, $params in $a11y-font-scales {
-  $factor: map-get($params, factor);
+.form {
+  .input-field {
+    $input-font-size: 12;
+    $input-slide-font-size: 18;
+    @each $scaleName, $params in $a11y-font-scales {
+      $factor: map-get($params, factor);
 
-  .form {
-    .input-field {
       .label {
-        &.a11y-fontscale-#{$scale} {
-          $font-size: 12;
-          font-size: $font-size * $factor;
+        &.a11y-fontscale-#{$scaleName} {
+          font-size: $input-font-size * $factor;
         }
       }
 
       &.input-sides {
         .label {
-          &.a11y-fontscale-#{$scale} {
-            $font-size: 18;
-            font-size: $font-size * $factor;
+          &.a11y-fontscale-#{$scaleName} {
+            font-size: $input-slide-font-size * $factor;
           }
         }
       }
