--- a/src/scss/ios/_action-bar.scss
+++ b/src/scss/ios/_action-bar.scss
@@ -1,11 +1,11 @@
-@each $scale, $params in $a11y-font-scales {
-  $font-size: 17;
-  $factor: map-get($params, factor);
+.action-bar {
+  .action-bar-title {
+    $action-bar-title-font-size: 17;
+    @each $scaleName, $params in $a11y-font-scales {
+      $factor: map-get($params, factor);
 
-  .action-bar {
-    .action-bar-title {
-      &.a11y-fontscale-#{$scale} {
-        font-size: $font-size * $factor;
+      &.a11y-fontscale-#{$scaleName} {
+        font-size: $action-bar-title-font-size * $factor;
       }
     }
   }
