--- a/src/scss/_fontscales.scss
+++ b/src/scss/_fontscales.scss
@@ -2,60 +2,60 @@ $a11y-font-scales: (
   50: (
     factor: 0.5,
     extraSmall: true,
-    ios: true
+    ios: true,
   ),
   70: (
     factor: 0.7,
     extraSmall: true,
-    ios: true
+    ios: true,
   ),
   85: (
     factor: 0.85,
     ios: true,
-    android: true
+    android: true,
   ),
   100: (
-    factor: 1.00,
+    factor: 1,
     ios: true,
-    android: true
+    android: true,
   ),
   115: (
     factor: 1.15,
     ios: true,
-    android: true
+    android: true,
   ),
   130: (
-    factor: 1.30,
+    factor: 1.3,
     ios: true,
-    android: true
+    android: true,
   ),
   150: (
-    factor: 1.50,
-    ios: true
+    factor: 1.5,
+    ios: true,
   ),
   200: (
-    factor: 2.00,
+    factor: 2,
     extraLarge: true,
-    ios: true
+    ios: true,
   ),
   250: (
-    factor: 2.50,
+    factor: 2.5,
     extraLarge: true,
-    ios: true
+    ios: true,
   ),
   300: (
-    factor: 3.00,
+    factor: 3,
     extraLarge: true,
-    ios: true
+    ios: true,
   ),
   350: (
-    factor: 3.50,
+    factor: 3.5,
     extraLarge: true,
-    ios: true
+    ios: true,
   ),
   400: (
-    factor: 4.00,
+    factor: 4,
     extraLarge: true,
-    ios: true
-  )
+    ios: true,
+  ),
 ) !default;
