--- a/demo/app/home/home.component.scss
+++ b/demo/app/home/home.component.scss
@@ -6,4 +6,16 @@
   border-color: black;
   border-radius: 10;
   padding: 10;
+
+  &.enabled {
+    &.a11y-service-disabled {
+      visibility: collapse;
+    }
+  }
+
+  &.disabled {
+      &.a11y-service-enabled {
+      visibility: collapse;
+    }
+  }
 }
