fix(aot): nativescript-angular + aot was broken when using the angular module

--- a/src/scss/a11y.ios.scss
+++ b/src/scss/a11y.ios.scss
@@ -1,5 +1,7 @@
 @import 'fontscales';
+@import 'common';
 
+// iOS specific styling
 @import 'ios/action-bar';
 @import 'ios/buttons';
 @import 'ios/forms';
