feat: use a shorthand cssClassName for theme

--- a/src/scss/ios/_action-bar.scss
+++ b/src/scss/ios/_action-bar.scss
@@ -1,9 +1,10 @@
 .action-bar {
   $action-bar-title-font-size: 17;
+
   @each $scaleName, $params in $a11y-font-scales {
     $factor: map-get($params, factor);
 
-    &.a11y-fontscale-#{$scaleName} {
+    &.ayfs-#{$scaleName} {
       .action-bar-title {
         font-size: $action-bar-title-font-size * $factor;
       }
