--- a/src/scss/ios/_segmented-bar.scss
+++ b/src/scss/ios/_segmented-bar.scss
@@ -2,7 +2,7 @@
   $segmented-bar-font-size: 13;
   @each $scaleName, $params in $a11y-font-scales {
     $factor: map-get($params, factor);
-    &.a11y-fontscale-#{$scaleName} {
+    &.ayfs-#{$scaleName} {
       font-size: $segmented-bar-font-size * $factor;
     }
   }
