--- a/src/scss/ios/utilities/_text.scss
+++ b/src/scss/ios/utilities/_text.scss
@@ -41,7 +41,7 @@ $a11y-font-sizes: (
     $factor: map-get($params, factor);
 
     .t-#{$font-size} {
-      &.a11y-fontscale-#{$scaleName} {
+      &.ayfs-#{$scaleName} {
         font-size: $font-size * $factor;
       }
     }
