--- a/src/scss/a11y.ios.scss
+++ b/src/scss/a11y.ios.scss
@@ -8,4 +8,6 @@
 @import 'ios/labels';
 @import 'ios/list-view';
 @import 'ios/login';
+@import 'ios/segmented-bar';
+@import 'ios/login';
 @import 'ios/utilities/text';
