--- a/demo/app/app.android.scss
+++ b/demo/app/app.android.scss
@@ -4,6 +4,7 @@
 // Import the theme’s main ruleset - both index and platform specific.
 @import '~nativescript-theme-core/scss/index';
 @import '~nativescript-theme-core/scss/platforms/index.android';
+@import '~@nota/nativescript-accessibility-ext/scss/a11y.android'; // <-- add this line
 
 // Import common styles
 @import 'app-common';
