--- a/demo/app/home/home.component.html
+++ b/demo/app/home/home.component.html
@@ -22,7 +22,15 @@
   </StackLayout>
   <ListView row="1" [items]="source" (loaded)="onLoaded($event)" (itemLoading)="onItemLoading($event)" (itemTap)="onItemTap($event)" class="list-group">
     <ng-template let-item="item" let-index="index" let-odd="odd" let-even="even">
-      <StackLayout [class.odd]="odd" [class.even]="even" accessible="true" (accessibilityFocus)="onAccessibilityFocus($event, index)" class="list-group-item">
+      <StackLayout
+        [class.odd]="odd"
+        [class.even]="even"
+        accessible="true"
+        (accessibilityFocus)="onAccessibilityFocus($event, index)"
+        class="list-group-item"
+        accessible="true"
+        accessibilityComponentType="button"
+      >
         <Label [text]="item.name"></Label>
       </StackLayout>
     </ng-template>
