feat: start adding customer css-properties for a11y

--- a/demo-ng/app/app.component.html
+++ b/demo-ng/app/app.component.html
@@ -6,7 +6,7 @@
   <StackLayout>
     <StackLayout class="text-center" accessible="true" accessibilityLabel="Congratulation accessibility is enabled" accessibilityTraits="header">
       <ios>
-        <Label class="scaled" text="Enable VoiecOver, if you haven't already"></Label>
+        <Label class="scaled" text="Enable VoiceOver, if you haven't already"></Label>
       </ios>
       <android>
         <Label text="Enable TalkBack, if you haven't already"></Label>
@@ -74,7 +74,7 @@
         class="body"
         textWrap="true"
         text="
-Set the accessibility label on the element, this will be read by the screen reader inplace in any 'text' value the element has.
+Set the accessibility label on the element, this will be read by the screen reader in-place in any 'text' value the element has.
 Important note:
   NativeScript provides the property automationText, this sets both `accessibilityLabel` AND `accessibilityIdentifier` on iOS which can break automated tests.
   If you use `accessibilityLabel` from this plugin, don't use `automationText` at the same time.
