--- a/demo/src/home/home.component.html
+++ b/demo/src/home/home.component.html
@@ -16,7 +16,7 @@
         <Label text="You need to enable TalkBack" textWrap="true"></Label>
       </StackLayout>
       <StackLayout class="text-center h1 screen-reader a11y-service-enabled-visible">
-        <Label text="TalkBack enabled" textWrap="true" accessibilityRole="image_button"></Label>
+        <Label text="TalkBack enabled" textWrap="true" accessible="true" accessibilityRole="radiobutton" accessibilityState="checked"></Label>
       </StackLayout>
     </android>
   </StackLayout>
